fix: reduce main header weight to improve readability on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 }
 h1 {
     font-family: "tiffin-latin-variable", sans-serif;
-    font-variation-settings: "wght" 400;
+    font-variation-settings: "wght" 300;
     font-style: normal;
     font-size: 2em;
 }
